<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/les_champ_a_modifier"
        android:textSize="34sp"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        android:text="@string/phone"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:text="@string/update"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>